# sensitive-information-audit

./: .gitignore  CLAUDE.md  README.md  README.zh-CN.md  package-lock.json
backend/: .env.example  .gitignore  README.md  TEST_DATABASE.md  create_admin.py  main.py  pyproject.toml  test_data.sql
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: connections.py  login.py  logs.py  roles.py  rules.py  tasks.py  users.py
backend/app/core/: builtin_rules.py  config.py  security.py
backend/app/db/: models.py
backend/app/schemas/: all.py
backend/app/services/: connector.py  logger.py  scanner.py
backend/migrations/: 001_add_task_fields.sql  002_add_rules_tracking.sql  003_add_selected_rules.sql  004_fix_schema.sql  005_add_rbac.sql
frontend/: README.md  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.vue  i18n.js  style.css
frontend/src/components/: ConfirmDialog.vue  Toast.vue
frontend/src/composables/: useToast.js
frontend/src/router/: index.js
frontend/src/stores/: auth.js
frontend/src/views/: Connections.vue  Dashboard.vue  Forbidden.vue  Login.vue  Logs.vue  NotFound.vue  Roles.vue  Rules.vue  Tasks.vue  Users.vue
